[package]
name = "cri-headings"
version = "0.1.2"
edition = "2021"
authors = [ "William Blackerby <wmblackerby@gmail.com>" ]

[dependencies]
anyhow = "1"
clap = { version = "4.3.0", features = ["derive"] }
csv = "1.3"
futures = "0.3"
indicatif = "0.17"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
